<resources>
    <string name="app_name">Профиль</string>

    <string name="action_settings">Настройки</string>

    <string name="name">Наименование</string>
    <string name="comm">Комментарий</string>
    <string name="tab1">Измерение</string>
    <string name="tab2">Профиль</string>
    <string name="delete">Удалить</string>
    <string name="tab3">Подготовка</string>
    <string name="measure_title">Параметры рельса:</string>
    <string name="measure_1">Hv:</string>
    <string name="save_file">Сохранить в файл</string>
    <string name="profile_on">Вкл. эталон</string>
    <string name="profile_off">Откл. эталон</string>
    <string name="selectGOST">Выбрать ГОСТ</string>
    <string name="measuring">Измерение</string>
    <string name="type_detector">Тип датчика</string>
    <string name="ip_port">Порт</string>
    <string name="ip_port_default">1234</string>
    <string name="battery">Заряд</string>
    <string name="params">Параметры рельса</string>
    <string name="laserError">Ошибка измерения! Лазер не подключен!</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="board_info">Информация об устройстве</string>
    <string name="laser_info">Информация об оптическом датчике</string>
    <string name="device_type">Тип устройства</string>
    <string name="base_d">Базовое растояние</string>
    <string name="mes_range">Диапазон измерения</string>
    <string name="number_scheme">Номер платы</string>
    <string name="firm_Ware">Версия ПО</string>
    <string name="serial_number">Серийный номер</string>
    <string name="pref_header_device_info">Информация об устройстве</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Основные настройки</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">Настройки соединения</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Звук</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_circuit_sound">Звук прибора</string>
    <string name="pref_circuit_sound_summary">Будет ли устройство оповещать звуковыми сигналами о процессе работы</string>
    <string name="email_address">E-Mail по умолчанию</string>
    <string name="email_address_default">cahek4293@mail.ru</string>
    <string name="email_address_summary">Данный адресс будет использован как адрес по умолчанмю</string>
    <string name="wifi_name">Имя wifi сети</string>
    <string name="wifi_name_summary">изменится при следующем запуске</string>
    <string name="wifi_name_default">X</string>
    <string name="demoMeasuring">Демо</string>
    <string name="yes">Да</string>
    <string name="clearlDialogTitle">Внимание!</string>
    <string name="no">Нет</string>
    <string name="clearDialogMessage">Вы хотите очистить историю измерений?</string>
    <string name="railwayNumber">Номер пути</string>
    <string name="railwaySide">Сторона пути</string>
    <string name="open_file">Открыть файл</string>
    <string name="action_menu">Дополнительные настройки</string>
    <string name="menu_clearAll">Очистить всё</string>
    <string name="menu_selectAll">Выбрать всё</string>
    <string name="menu_deselectAll">Снять выделение</string>
    <string name="menu_inverseSelection">Инвертировать выделение</string>
    <string name="location">Местоположение</string>
    <string name="RWName">Наименование Ж/Д</string>
    <string name="railwayPlan">План пути</string>
    <string name="railwayDistance">Дистанция пути</string>
    <string name="railwayCoordinate">Путевая координата</string>
    <string name="pref_drawing_lines">Рисовать профиль линией</string>
    <string name="pref_circuit_drawing_lines_off">Профиль будет нарисован точками</string>
    <string name="pref_circuit_drawing_lines_on">Профиль будет нарисован линией</string>
    <string name="pref_header_drawing">Настройки отображения</string>


    //from_strings_activity

</resources>
