<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/email_address_default"
        android:key="email_address"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/email_address_summary"
        android:title="@string/email_address" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/wifi_name_default"
        android:key="wifi_name"
        android:maxLines="1"
        android:maxLength="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/wifi_name_summary"
        android:title="@string/wifi_name" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/ip_address_default"
        android:inputType="date"
        android:key="ip_address"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/ip_address" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/ip_port_default"
        android:inputType="date"
        android:key="ip_port"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/ip_port" />

    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/type_detector_list_titles"
        android:entryValues="@array/type_detector_list_values"
        android:key="type_detector"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/type_detector" />

</PreferenceScreen>
